show ready icon

--- a/src/azdo/web/main.scss
+++ b/src/azdo/web/main.scss
@@ -12,6 +12,12 @@ body {
     padding: 8px;
 }
 
+.blank-icon-medium {
+    width: 16px;
+    height: 16px;
+    background-color: transparent;
+}
+
 .neutral-0 {
     background-color: azdo.$neutral-0;
 }
